add code style update gradle wrapper add ability to load any track